# Hole-Cleaning-Project

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/: featured_data.csv
models/: tuned_hyperparams.json
notebooks/: hole_cleaning_walkthrough.ipynb
reports/tables/: density_analysis.csv  feature_ranking.csv  feed_zones.csv  holdout_metrics.csv  model_benchmark.csv  optimized_concentration.csv  permutation_importance.csv  velocity_analysis.csv  zone_summary.csv
scripts/: 01_prepare_data.py  02_run_eda.py  03_train_models.py  04_optimize.py  05_find_zones.py  _bootstrap.py  run_all.py
src/holecleaning/: __init__.py  config.py  data.py  eda.py  evaluation.py  features.py  models.py  optimization.py  zones.py
tests/: test_workflow.py
