[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holecleaning"
version = "1.0.0"
description = "Machine-learning workflow for predicting downhole cuttings concentration and determining hole-cleaning conditions from surface drilling parameters."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Oluwatobiloba Awojinrin" }]
keywords = [
    "drilling", "hole-cleaning", "cuttings-transport", "petroleum-engineering",
    "machine-learning", "ensemble-methods", "regression",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scikit-learn>=1.3",
    "scipy>=1.9",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "joblib>=1.2",
]

[project.optional-dependencies]
notebooks = ["jupyter", "ipykernel"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
